--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -31,6 +31,12 @@
         font-size: 17px;
         
     }
+    .contact-info{
+        margin-top: 16px;
+    }
+    .s-mt-32{
+        margin-top: 32px !important;
+    }
 }
 /* mobile */
 @media (max-width: 739px){
