--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ html{
 .mt-16{
     margin-top: 16px !important;
 }
+
 .row{
     
     margin: 0 -8px;
@@ -152,7 +153,7 @@ html{
    position: relative;
    margin-top: 46px;
    padding-top: 50%;
-   background: url('/assets/img/slider/chicago.jpg') top center / cover no-repeat;
+   background: url('../img/slider/chicago.jpg') top center / cover no-repeat;
 
 }
 #slider .text-content{
@@ -161,15 +162,18 @@ html{
     bottom: 47px;
     text-align: center;
     width: 100%;
+    
 }
 #slider .text-heading{
     font-weight: 400;
     margin-bottom: 25px;
     font-size: 24px;
+    text-shadow: 0 0 1px #000;
 }
 #slider .text-description{
     font-size: 15px;
     font-weight: border;
+    text-shadow: 0 0 5px #000;
 }
 #content{
  
