--- a/phong-shopee/assets/css/base.css
+++ b/phong-shopee/assets/css/base.css
@@ -4,6 +4,7 @@
     --text-color: #333;
     --primary-color: #f7432e;
     --border-color: #dbdbdb;
+    --star-gold-color: #ffce3e;
     --header-height: 120px;
     --navbar-height: 29px;
     --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
@@ -34,15 +35,21 @@ html{
 .grid__row{
     display: flex;
     flex-wrap: wrap;
+    margin: 0 -5px;
 }
 .grid__column-2{
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 16.6667%;
 }
+.grid__column-2-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
 .grid__column-10{
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 83.3334%;
 }
 @keyframes fadeIn{
@@ -99,7 +106,7 @@ html{
     min-width: 124px;
     height: 34px;
     line-height: 34px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     border: none;
     border-radius: 2px;
     text-decoration: none;
@@ -125,4 +132,89 @@ html{
 .btn.btn--size-s{
     height: 32px;
     font-size: 1.2rem;
+}
+.select-input{
+    position: relative;
+    width: 200px;
+    height: 34px;
+    background-color: var(--white-color);
+    border-radius: 2px;
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px;
+}
+.select-input__icon{
+    font-size: 1.4rem;
+    color: rgb(146, 144, 144);
+}
+.select-input:hover 
+.select-input__list{
+    display: block;
+}
+.select-input__list::before{
+    content:"";
+    display: block;
+    width: 100%;
+    position: absolute;
+    height: 5px;
+    top: -4px;
+    left: 0;
+}
+
+.select-input__list{
+    position: absolute;
+    display: none;
+    top: 70%;
+    left: 0;
+    right: 0;
+    background-color: var(--white-color);
+    list-style: none;
+    padding: 8px 12px;
+    border-radius: 2px;
+    animation: fadeIn ease-in 0.2s;
+    z-index: 1;
+}
+.select-input__option-item{
+    padding: 6px 0;
+    cursor: pointer;
+}
+.select-input__option-item:hover .select-input__item-link{
+    color: var(--primary-color);
+}
+.select-input__item-link{
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: var(--text-color);
+}
+.pagination{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pagination-item{
+    margin: 0 12px;
+}
+.pagination-item--active .pagination-item__link{
+    background-color: var(--primary-color);
+    color: var(--white-color);
+
+}
+.pagination-item--active .pagination-item__link:hover{
+    background-color: #ed5c3f;
+}
+.pagination-item__link{
+    --height: 30px;
+    text-decoration: none;
+    color: #939393;
+    font-size: 2rem;
+    display: block;
+    min-width: 40px;
+    height: var(--height);
+    text-align: center;
+    line-height: var(--height);
+    font-weight: 300;
+    border-radius: 2px;
 }
