--- a/phong-shopee/assets/css/main.css
+++ b/phong-shopee/assets/css/main.css
@@ -29,7 +29,7 @@
 .navbar__item{
     display: inline-block;
     color: var(--white-color);
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 300;
     
 }
@@ -93,7 +93,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .navbar__item-user-name{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     margin-left: 3px;
 }
 .navbar__item-user-menu:hover .navbar__user-menu{
@@ -102,7 +102,7 @@
 .navbar__user-menu{
     position: absolute;
     z-index: 1;
-    top: calc(100% + 6px);
+    top: calc(100% + 8px);
     right: 0;
     width: 145px;
     border-radius: 2px;
@@ -135,7 +135,7 @@
 .navbar__user-item{
     display: block;
     padding: 8px 10px 8px 16px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 400;
 }
 .navbar__user-item:first-child{
@@ -170,6 +170,8 @@
     background-color: var(--white-color);
     display: none;
     animation: fadeIn ease-in 0.3s;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0 ,0 ,0 ,0.1);
     
 }
 .navbar__qr::before{
@@ -248,6 +250,7 @@
 @keyframes navbarNotifyGrowth{
     from{
         transform: scale(0);
+        /* độ nở  */
         opacity: 0;
     }
     to{
@@ -266,7 +269,7 @@
     color: #999;
     margin: 0 0 0 12px;
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     line-height:40px;
 }
 .navbar__notify-list{
@@ -307,7 +310,7 @@
 
 .navbar__notify-title{
     display: block;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 400;
     color: var(--text-color);
 }
@@ -328,7 +331,7 @@
     color: var(--text-color);
     padding: 8px 16px;
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 /* auth-form */
 
@@ -372,7 +375,7 @@
     height: 40px;
     margin-top: 16px;
     padding: 0 12px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     border: 1px solid var(--border-color);
     border-radius: 2px;
     outline: none;
@@ -441,7 +444,7 @@
 }
 .auth-form__help-link{
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 .auth-form__help-link:first-child{
     color: var(--primary-color);
@@ -486,33 +489,40 @@
     width: 150px;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 2px;
 }
 .header__cart-wrap{
-    display: inline-block;
-    padding: 0 8px;
+    /* display: inline-block; */
+    display: flex;
+    padding: 0 8px 0;
     cursor: pointer;
+    /* align-items: center; */
     position: relative;
 }
 .header__cart-icon{
     font-size: 2.4rem;
     color: var(--white-color);
+    
+
 }
 .header__cart-wrap:hover 
 .header__cart-list{
     display: block;
 }
+ 
 .header__cart-list{
     position: absolute;
-    top: calc(100% + 8px);
+    top: calc(100% + 9px);
     right: -3px;
     width: 400px;
     background-color: var(--white-color);
-    box-shadow: 0 2px 5px #efefef;
+    box-shadow: 0 1px 2px rgba( 0,0,0,0.1);
     border-radius: 2px;
     flex-flow: column wrap;
     align-items: flex-start;
     display: none;
+    z-index: 1;
 }
 .header__cart-list::before{
     content: "";
@@ -526,8 +536,9 @@
 .header__cart-list::after{
     content: "";
     position: absolute;
+    display: block;
     top: -12px;
-    right: 3px;
+    right: 0px;
     width: 45px;
     height: 12px;
 }
@@ -541,7 +552,9 @@
 .header__cart-list-item{
     padding-left: 0;
     list-style: none;
-    
+    height: 40vh;
+    overflow-y: scroll;
+
 }
 .header__cart-item{
     padding: 0 12px 0px;
@@ -573,15 +586,24 @@
 }
 .header__cart-item-name{
     margin: 0;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 500;
-
+    line-height: 1.4rem;
+    overflow: hidden;
+    width: 60%;
+    display: block;
+    display: -webkit-box;
+    /* thuộc tính hỗ trợ các browser có thuộc tính này */
+    -webkit-box-orient: vertical;
+    /* chiều của dòng chữ là chiều dọc */
+    -webkit-line-clamp: 1;
+    /* tạo dấu 3 chấm ở dòng 1 */
 }
 .header__cart-item-price{
-    
+    /* flex: 1; */
 }
 .header__item-price{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--primary-color);
 }
 .header__cart-item-multiply{
@@ -604,7 +626,7 @@
 }
 .header__cart-item-remove{
     color: var(--text-color);
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 400;
 }
 .header__cart-item-remove:hover{
@@ -633,7 +655,7 @@
     top: -9px;
     right: -5px;
     padding: 1px 7px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     line-height: 1.4rem;
     border-radius: 10px;
     border: 2px solid #ee4d2d;
@@ -668,7 +690,7 @@
 .header__cart-list--no-cart-msg{
     display: none;
     margin-top: 24px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--text-color);
 }
 .header__search-input-wrap{
@@ -682,7 +704,7 @@
     height: 100%;
     border: none;
     outline: none;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--text-color);
     padding: 0 16px;
     border-radius: 2px;
@@ -701,11 +723,12 @@
     background-color: var(--white-color);
     border-radius: 2px;
     box-shadow: 0 2px 5px #efefef;
+    z-index: 1;
 }
 .header__search-history-heading{
     display: block;
     margin: 10px 10px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 400;
     color: #999;
 }
@@ -717,7 +740,7 @@
 .header__search-history-item{
     padding-left: 10px;
     height: 36px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 .header__search-history-item:hover{
     background-color: #fafafa;
@@ -741,11 +764,11 @@
     
 } 
 .header__search-selection-label{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--text-color);
 }
 .header__search-selection-icon{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: #4a4a4a;
     margin: 0 16px 0 8px;
     position: relative;
@@ -765,7 +788,7 @@
     cursor: pointer;
 }
 .header__search-btn-icon{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--white-color);
     
 }
@@ -775,6 +798,7 @@
     cursor: pointer;
 }
 .header__search-option{
+    z-index: 1;
     margin: 5px 0;
     position: absolute;
     right: 0;
@@ -815,7 +839,7 @@
     border-bottom-right-radius: 2px;
 } */
 .header__search-option-item span{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     color: var(--text-color);
 }
 .header__search-option i{
@@ -862,7 +886,7 @@
 }
 .category-item:hover .category-item__link{
     right: -4px;
-    color: var(--primary-color);
+    /* color: var(--primary-color); */
 }
 .category-item--active .category-item__link{
     color: var(--primary-color);
@@ -891,3 +915,315 @@
     transition: right linear 0.2s;
 }
 /* Home sort filter */
+.home-filter{
+    display: flex;
+    background-color: rgba(0,0,0,0.04);
+    align-items: center;
+    padding: 14px 20px;
+}
+.home-filter__label{
+    font-size: 1.4rem;
+    margin-right: 16px;
+}
+.home-filter-btn{
+    min-width: 90px;
+    margin-right: 12px;
+}
+.home-filter__page{
+    display: flex;
+    margin-left: auto;
+    font-size: 1.5rem;
+    align-items: center;
+}
+.home-filter__page-num{
+    color: var(--primary-color);
+}
+.home-filter__page-control{
+    margin-left: 20px;
+    height: 34px;
+    width: 78px;
+    display: flex;
+    
+    
+}
+.home-filter__page-control-btn{
+    display: flex;
+    flex: 1;
+    text-decoration: none;
+    background-color: var(--white-color);
+    margin: 0 1px;
+}
+.home-filter__page-control-btn--disabled{
+    background-color: #f9f9f9;
+    cursor: default;
+}
+.home-filter__page-control-btn--disabled  
+.home-filter__page-control-icon{
+    color: #ccc;
+}
+
+.home-filter__page-control-icon{
+    color: var(--text-color);
+    margin: auto;
+    font-size: 1.4rem;
+}
+/* product item */
+.home-product{
+    margin-bottom: 10px;
+}
+.home-product-item{
+    display: block;
+    text-decoration: none;
+    margin: 10px 0 0;
+    background-color: var(--white-color);
+    position: relative;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    transition: transform linear 0.1s;
+    will-change: auto;
+}
+.home-product-item:hover{
+    transform: translateY(-1px);
+    box-shadow: 0 1px 20px rgba(0 , 0 ,0 , 0.05);
+}
+
+.home-product-item__img{
+    padding-top: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+.home-product-item__name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    line-height: 1.8rem;
+    height: 36px;
+    /* muốn chỉ có 2 dòng text thôi nên để height gấp đôi line height */
+    overflow: hidden;
+    margin: 10px;
+    display: block;
+    display: -webkit-box;
+    /* nếu -webkit-box ko chạy nó sẽ chạy cái display: block */
+    -webkit-box-orient: vertical;
+    /* hướng của dòng chữ theo chiều nào */
+    -webkit-line-clamp: 2;
+    /* hạn chế phần content lại còn 2 dòng nó sẽ tạo dấu 3 chấm khi vượt quá 2 dòng  */
+    /* muốn dùng cái -webkit này phải display: -webkit-box */
+    
+}
+.home-product-item__price{
+    display: flex;
+    
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+.home-product-item__price-old{
+    font-size: 1.4rem;
+    color: #666;
+    text-decoration: line-through;
+    margin-left: 10px;
+}
+.home-product-item__price-current{
+    font-size: 1.6rem;
+    color: var(--primary-color);
+    margin-left: 10px
+}
+.home-product-item__action{
+    display: flex;
+    justify-content: space-between;
+    margin: 6px 10px;
+    align-items: center;
+}
+.home-product-item__action-like{
+    font-size: 1.3rem;
+}
+
+i.home-product-item__action-like-icon-fill{
+    display: none;
+}
+.home-product-item__action-like--liked .home-product-item__action-like-icon-fill{
+    display:  inline-block;
+    color: red;
+}
+.home-product-item__action-like--liked .home-product-item__action-like-icon-empty{
+    display: none;
+}
+.home-product-item__rating{
+    font-size: 0.8rem;
+    margin: -1px 0 0 auto;
+    /* transform: scale(0.8); */
+    /* độ nở 1 là như cũ 0.7 là nhỏ lại */
+    /* transform-origin: right; */
+    /* để tâm thu nhỏ sang right */
+}
+.home-product-item__star--gold{
+    color: var(--star-gold-color);
+}
+.home-product-item__sold{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 6px;
+}
+.home-product-item__origin{
+    display: flex;
+    justify-content: space-between;
+    margin: 3px 10px 0;
+    color: #595959;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.home-product-item__brand{
+    
+}
+.home-product-item__origin-name{
+
+}
+.home-product-item__favourite{
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    color: var(--primary-color);
+    background-color: currentColor;
+    /* lấy màu của color set cho background-color và mấy thẻ con cũng sử dụng 
+    currentColor được nên lưu ý phải set màu cho font chữ riêng nếu không sẽ bị ăn theo màu */
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    padding-right: 5px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.home-product-item__favourite i{
+    color: var(--white-color);
+    font-size: 0.9rem;
+    margin: 0 2px 0 5px;
+}
+.home-product-item__favourite span{
+    color: var(--white-color);
+}
+.home-product-item__favourite::before{
+    content:"";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    border-top: 3px solid currentColor;
+    /* color của thẻ chứa nó */
+    border-left: 3px solid transparent;
+     /*set border top left sẽ cắt hình vuông ra 2 tam giác set color cho top
+     để mũi tam giác hướng top right  */
+    filter: brightness(60%);
+    /* độ sáng của màu còn 60% */
+
+}
+.home-product-item__sale-off{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 36px;
+    background-color: rgba(255,216,64,0.94);
+    text-align: center;
+}
+.home-product-item__sale-off::after{
+    content: "";
+    left: 0;
+    bottom: -4px;
+    position: absolute;
+    border-width: 4px 20px 4px;
+    border-style: solid;
+    border-color: transparent rgba(255,216,64,0.94) transparent rgba(255,216,64,0.94);
+
+}
+.home-product-item__sale-off-percent{
+    position: relative;
+    top: 5px;
+    color: #ee4d2d;
+    font-weight: 600;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+}
+.home-product-item__sale-off-label{
+    position: relative;
+    top: 4px;
+    color: var(--white-color);
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+    font-weight: 600;
+}
+.home-product__pagination{
+    margin: 48px 0 32px;
+}
+/* footer */
+.footer{
+    border-top: 4px solid var(--primary-color);
+    padding-top: 20px;
+}
+.footer__heading{
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+
+}
+.footer-list{
+    padding-left: 0;
+    list-style: none;
+}
+.footer-item__link{
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #737373;
+    padding: 9px 0;
+    display: flex;
+    align-items: center;
+
+}
+.footer-item__link:hover{
+    color: var(--primary-color);
+
+}
+.footer-item__link-icon{
+    margin: -1px 8px 0 0;
+    font-size: 1.6rem;
+}
+.footer__download{
+    display: flex;
+}
+.footer__download-qr-img{
+    height: 80px;
+    width: 80px;
+    border: 1px solid var(--border-color);
+    /* object-fit: contain; */
+    /* dùng để fix kích thước của thẻ img */
+
+}
+.footer__download-apps{
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer__download-app-link{
+    text-decoration: none;
+}
+.footer__download-app-img{
+    height: 18px;
+}
+.footer__bottom{
+    background-color: #f5f5f5;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 32px;
+}
+.footer__bottom-box{
+    display: flex;
+}
+.footer__bottom-line{
+    margin: 0 auto;
+}
+.footer__copyright{
+    
+    font-size: 1.2rem;
+}
